--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,3 +1,15 @@
 ---
-# Content
+galaxy_info:
+  author: thisguyshouldworkforus
+  description: Ansible Roles for stuff and junk
+  company: Snyder Business And Technology Consulting, LLC (SBATC)
+  license: MIT
+  min_ansible_version: 2.1
+  galaxy_tags:
+    - 1.0.0
+    - nvidia
+    - cuda
+    - nvidia-drivers
+    - gpu
+dependencies: []
 ...
