--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,15 +1,16 @@
 ---
 galaxy_info:
   author: thisguyshouldworkforus
-  description: Ansible Roles for stuff and junk
+  description: Ansible role to install NVIDIA drivers and CUDA toolkit on RedHat-based x86_64 systems
   company: "Hire This Guy, LLC."
   license: MIT
   min_ansible_version: 2.1
   galaxy_tags:
-    - 1.0.0
+    - 1.1.0
     - nvidia
     - cuda
     - nvidia-drivers
     - gpu
-dependencies: []
+dependencies:
+  - thisguyshouldworkforus.rhel
 ...
