--- a/meta/main.yml
+++ b/meta/main.yml
@@ -6,15 +6,12 @@ galaxy_info:
   license: MIT
   min_ansible_version: "2.9"
   platforms:
-    - name: EL
-      versions:
-        - "8"
-        - "9"
-        - "10"
+    - name: EL # RedHat, and RHEL Clones
+
   galaxy_tags:
-    - tag1
-    - tag2
-    - tag4
+    - nvidia
+    - cuda
+    - gpu
 
 collections:
   - community.general
